docs/envoy/v1.25.3/_sources/api-v3/extensions/filters/network/generic_proxy/matcher/v3/matcher.proto.rst.txt
.. _envoy_v3_api_file_contrib/envoy/extensions/filters/network/generic_proxy/matcher/v3/matcher.proto:

Generic Proxy Route Matcher Configuration (proto)
=================================================


.. warning::
   This API feature is currently work-in-progress. API features marked as work-in-progress are not considered stable, are not covered by the :ref:`threat model <arch_overview_threat_model>`, are not supported by the security team, and are subject to breaking changes. Do not use this feature without understanding each of the previous points.







.. _envoy_v3_api_msg_extensions.filters.network.generic_proxy.matcher.v3.ServiceMatchInput:

extensions.filters.network.generic_proxy.matcher.v3.ServiceMatchInput
---------------------------------------------------------------------


:repo:`[extensions.filters.network.generic_proxy.matcher.v3.ServiceMatchInput proto] <api/contrib/envoy/extensions/filters/network/generic_proxy/matcher/v3/matcher.proto#L20>`

Used to match request service of the downstream request. Only applicable if a service provided
by the application protocol.





.. _envoy_v3_api_msg_extensions.filters.network.generic_proxy.matcher.v3.MethodMatchInput:

extensions.filters.network.generic_proxy.matcher.v3.MethodMatchInput
--------------------------------------------------------------------


:repo:`[extensions.filters.network.generic_proxy.matcher.v3.MethodMatchInput proto] <api/contrib/envoy/extensions/filters/network/generic_proxy/matcher/v3/matcher.proto#L25>`

Used to match request method of the downstream request. Only applicable if a method provided
by the application protocol.





.. _envoy_v3_api_msg_extensions.filters.network.generic_proxy.matcher.v3.PropertyMatchInput:

extensions.filters.network.generic_proxy.matcher.v3.PropertyMatchInput
----------------------------------------------------------------------


:repo:`[extensions.filters.network.generic_proxy.matcher.v3.PropertyMatchInput proto] <api/contrib/envoy/extensions/filters/network/generic_proxy/matcher/v3/matcher.proto#L30>`

Used to match an arbitrary property of the downstream request.
These properties are populated by the codecs of application protocols.



.. code-block:: json
  :force:

  {
    "property_name": ...
  }

.. _envoy_v3_api_field_extensions.filters.network.generic_proxy.matcher.v3.PropertyMatchInput.property_name:


property_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The property name to match on.


